# llm-proxy-rs

./: Cargo.toml  config.toml.example  test.diff
chat/: Cargo.toml
chat/src/: bedrock.rs  error.rs  lib.rs  openai.rs  providers.rs
request/: Cargo.toml
request/src/: lib.rs
response/: Cargo.toml
response/src/: lib.rs
server/: Cargo.toml
server/src/: error.rs  main.rs
