[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
axum = { version = "0.8.1", features = ["macros"] }
chat = { path = "../chat" }
config = "0.15.7"
futures = "0.3.31"
request = { path = "../request" }
response = { path = "../response" }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
